--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sea_palace_booking
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=neverlikedMySql
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
